--- a/r-references.bib
+++ b/r-references.bib
@@ -462,3 +462,117 @@ Output},
   number = {4},
   pages = {1--18},
 }
+@Article{R-bayestestR,
+  title = {bayestestR: Describing Effects and their Uncertainty, Existence and Significance within the Bayesian Framework.},
+  author = {Dominique Makowski and Mattan S. Ben-Shachar and Daniel Lüdecke},
+  journal = {Journal of Open Source Software},
+  doi = {10.21105/joss.01541},
+  year = {2019},
+  number = {40},
+  volume = {4},
+  pages = {1541},
+  url = {https://joss.theoj.org/papers/10.21105/joss.01541},
+}
+@Article{R-correlation,
+  title = {Methods and Algorithms for Correlation Analysis in R.},
+  author = {Dominique Makowski and Mattan S. Ben-Shachar and Indrajeet Patil and Daniel Lüdecke},
+  doi = {10.21105/joss.02306},
+  year = {2020},
+  journal = {Journal of Open Source Software},
+  number = {51},
+  volume = {5},
+  pages = {2306},
+  url = {https://joss.theoj.org/papers/10.21105/joss.02306},
+}
+@Article{R-datawizard,
+  title = {{datawizard}: An {R} Package for Easy Data Preparation and Statistical Transformations},
+  author = {Indrajeet Patil and Dominique Makowski and Mattan S. Ben-Shachar and Brenton M. Wiernik and Etienne Bacher and Daniel Lüdecke},
+  journal = {Journal of Open Source Software},
+  year = {2022},
+  volume = {7},
+  number = {78},
+  pages = {4684},
+  doi = {10.21105/joss.04684},
+}
+@Article{R-easystats,
+  title = {easystats: Framework for Easy Statistical Modeling, Visualization, and Reporting},
+  author = {Daniel Lüdecke and Mattan S. Ben-Shachar and Indrajeet Patil and Brenton M. Wiernik and Dominique Makowski},
+  journal = {CRAN},
+  year = {2022},
+  note = {R package},
+  url = {https://easystats.github.io/easystats/},
+}
+@Article{R-effectsize,
+  title = {{e}ffectsize: Estimation of Effect Size Indices and Standardized Parameters},
+  author = {Mattan S. Ben-Shachar and Daniel Lüdecke and Dominique Makowski},
+  year = {2020},
+  journal = {Journal of Open Source Software},
+  volume = {5},
+  number = {56},
+  pages = {2815},
+  publisher = {The Open Journal},
+  doi = {10.21105/joss.02815},
+  url = {https://doi.org/10.21105/joss.02815},
+}
+@Article{R-insight,
+  title = {{insight}: A Unified Interface to Access Information from Model Objects in {R}.},
+  volume = {4},
+  doi = {10.21105/joss.01412},
+  number = {38},
+  journal = {Journal of Open Source Software},
+  author = {Daniel Lüdecke and Philip Waggoner and Dominique Makowski},
+  year = {2019},
+  pages = {1412},
+}
+@Article{R-modelbased,
+  title = {Estimation of Model-Based Predictions, Contrasts and Means.},
+  author = {Dominique Makowski and Mattan S. Ben-Shachar and Indrajeet Patil and Daniel Lüdecke},
+  journal = {CRAN},
+  year = {2020},
+  url = {https://github.com/easystats/modelbased},
+}
+@Manual{R-pacman,
+  title = {{pacman}: {P}ackage Management for {R}},
+  author = {Tyler W. Rinker and Dason Kurkiewicz},
+  address = {Buffalo, New York},
+  note = {version 0.5.0},
+  year = {2018},
+  url = {http://github.com/trinker/pacman},
+}
+@Article{R-parameters,
+  title = {Extracting, Computing and Exploring the Parameters of Statistical Models using {R}.},
+  volume = {5},
+  doi = {10.21105/joss.02445},
+  number = {53},
+  journal = {Journal of Open Source Software},
+  author = {Daniel Lüdecke and Mattan S. Ben-Shachar and Indrajeet Patil and Dominique Makowski},
+  year = {2020},
+  pages = {2445},
+}
+@Article{R-performance,
+  title = {{performance}: An {R} Package for Assessment, Comparison and Testing of Statistical Models},
+  author = {Daniel Lüdecke and Mattan S. Ben-Shachar and Indrajeet Patil and Philip Waggoner and Dominique Makowski},
+  year = {2021},
+  journal = {Journal of Open Source Software},
+  volume = {6},
+  number = {60},
+  pages = {3139},
+  doi = {10.21105/joss.03139},
+}
+@Article{R-report,
+  title = {Automated Results Reporting as a Practical Tool to Improve Reproducibility and Methodological Best Practices Adoption},
+  author = {Dominique Makowski and Mattan S. Ben-Shachar and Indrajeet Patil and Daniel Lüdecke},
+  year = {2021},
+  journal = {CRAN},
+  url = {https://github.com/easystats/report},
+}
+@Article{R-see,
+  title = {{see}: An {R} Package for Visualizing Statistical Models},
+  author = {Daniel Lüdecke and Indrajeet Patil and Mattan S. Ben-Shachar and Brenton M. Wiernik and Philip Waggoner and Dominique Makowski},
+  journal = {Journal of Open Source Software},
+  year = {2021},
+  volume = {6},
+  number = {64},
+  pages = {3393},
+  doi = {10.21105/joss.03393},
+}
